--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -3,13 +3,13 @@
 <div class="row body-styling">
   <div class="column">
     <div class="text-styling">Hey! Ich bin Caro und ich bin Tattooartist seit 2019. </div>
-    <img src="../../../assets/IMG_7522.JPG" style="width:100%">
-    <img src="../../../assets/IMG_7524.JPG" style="width:100%">
+    <img class="column-img" src="../../../assets/IMG_7524.JPG" style="width:100%">
+    <div class="text-styling">I am doing fineline, realistic and minimalisic tattoos. Please keep tha in mind.</div>
   </div>
   <div class="column">
-    <img src="../../../assets/IMG_7529.JPG" style="width:100%">
-    <img src="../../../assets/IMG_7530.JPG" style="width:100%">
-    <img src="../../../assets/IMG_7531.JPG" style="width:100%">
+    <img  class="column-img" src="../../../assets/IMG_7530.JPG" style="width:100%">
+    <div class="text-styling">Instagram: redhaare Email: email@email.de. Please check my checklist for bookings.</div>
+    <img  class="column-img" src="../../../assets/IMG_7532.JPG" style="width:100%">
   </div>
 </div>
 
