--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header-styling">
     <div class="logo-styling">
-      <img src="../../../assets/langesLogo.jpg" style="width:600px" routerLink="">
+      <img src="../../../assets/langesLogo.jpg" style="width:50%" routerLink="">
     </div>
     <div class="menu-styling">
       <button class="button-styling" routerLink="pictures" mat-button>PICTURES</button>
