--- a/frontend/src/app/layout/layout.component.css
+++ b/frontend/src/app/layout/layout.component.css
@@ -24,7 +24,7 @@
   padding: 0 4px;
 }
 
-.column img {
+.column-img {
   margin-top: 8px;
   vertical-align: middle;
   width: 100%;
@@ -50,12 +50,6 @@
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 950px) {
-  .body-styling {
-    margin-top: 10%;
-  }
-}
-
 @media screen and (max-width: 700px) {
   .column {
     -ms-flex: 100%;
