--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
 <div class="footer-styling">
-  <h5>IMPRESSUM</h5>
+  <button mat-button>IMPRESSUM </button>
+  <button class="en-button" mat-button>EN</button>
+  |
+  <button class="de-button" mat-button>DE</button>
 </div>
