--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,11 +1,7 @@
-:host {
-  position: absolute;
-  top: 64px;  /* here you must specify the height of your topbar*/
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-body {
-  font-family: "Academy Engraved LET" !important;
+.spectrumBackground {
+  background:
+    linear-gradient(cornflowerblue, transparent),
+    linear-gradient(to top left, palevioletred, transparent),
+    linear-gradient(to top right, mediumseagreen, transparent);
+  background-blend-mode: screen;
 }
