--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -1,7 +1,29 @@
 .footer-styling {
-  background-color: #e1c9a6;
-  padding-top: 5%;
+  background-color: transparent;
+  padding-top: 2%;
   padding-bottom: 1%;
   text-align: center;
   color: oldlace;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+button {
+  color: oldlace;
+  font-weight: lighter;
+}
+
+button:hover {
+  font-size: medium;
+  color: palevioletred;
+}
+
+.en-button, .de-button {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+.mat-button {
+  min-width: 20px !important;
 }
