--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -8,33 +8,36 @@
   z-index: 100;
 }
 
-
 .button-styling {
-  color: #fdf5e6;
-  font-size: medium;
+  font-family: Silom;
+  color: oldlace;
+  font-size: x-large;
 }
 
+.button-styling:hover {
+  color: white;
+  font-size: xx-large;
+}
 
 .header-styling {
-  background-color: #e1c9a6 !important;
+  background-color: transparent !important;
   margin: auto;
   position: relative;
 }
 
 .logo-styling {
-  background-color: #e1c9a6;
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .menu-styling {
-  background-color: #e1c9a6;
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 
 ::ng-deep .mat-button-focus-overlay {
   display: none !important;
