--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,55 @@
-<p>home works!</p>
+<div class="wrapper">
+  <div class="grid-container">
+    <div class="grid-element">
+      <p class="headline">{{ "home.aboutMe" | translate }}</p>
+      <p class="content">{{ "home.aboutMeText" | translate }}</p>
+    </div>
+
+    <div class="grid-element">
+      <img src="../../assets/images/carlo.jpg" width="100%" height="350px">
+    </div>
+
+    <div class="grid-element">
+      <p class="headline">{{ "home.theStudio" | translate }}</p>
+      <p class="content">{{ "home.theStudioText" | translate }}</p>
+    </div>
+
+    <div class="grid-element">
+      <p class="headline">{{ "home.myStyle" | translate }}</p>
+      <p class="content">{{ "home.myStyleText" | translate }}</p>
+    </div>
+  </div>
+</div>
+<!--
+<div class="wrapper">
+  <div class="item a">
+    <mat-card>
+      <mat-card-title>ÜBER MICH</mat-card-title>
+      <mat-card-content>
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod.
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="item b">
+  </div>
+
+  <div class="item c">
+    <mat-card>
+      <mat-card-title>ÜBER DAS STUDIO</mat-card-title>
+      <mat-card-content>
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod.
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="item d">
+    <mat-card>
+      <mat-card-title>MEIN STIL</mat-card-title>
+      <mat-card-content>
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod.
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
+-->
