design Verbesserungen header, home, FAQ, Galerie

--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -3,11 +3,11 @@
   padding-top: 2%;
   padding-bottom: 1%;
   text-align: center;
-  color: oldlace;
+  color: hotpink;
 }
 
 button {
-  color: oldlace;
+  color: hotpink;
   font-weight: lighter;
 }
 
