--- a/frontend/src/app/gallery/gallery.component.css
+++ b/frontend/src/app/gallery/gallery.component.css
@@ -8,6 +8,8 @@
   -ms-flex-wrap: wrap; /* IE10 */
   flex-wrap: wrap;
   padding: 0 4px;
+  max-width: 1244px;
+  margin: auto;
 }
 
 /* Create four equal columns that sits next to each other */
