--- a/frontend/src/app/gallery/gallery.component.html
+++ b/frontend/src/app/gallery/gallery.component.html
@@ -6,17 +6,17 @@
   </div>
   <div class="column">
     <img src="../../assets/images/img4.jpeg">
-    <img src="../../assets/images/img7.jpeg">
-    <img src="../../assets/images/img6.jpeg">
+    <img src="../../assets/images/img15.jpg">
+    <img src="../../assets/images/img16.jpg">
   </div>
   <div class="column">
-    <img src="../../assets/images/img3.jpeg">
-    <img src="../../assets/images/img5.jpeg">
-    <img src="../../assets/images/img7.jpeg">
+    <img src="../../assets/images/img13.jpg">
+    <img src="../../assets/images/img8.jpg">
+    <img src="../../assets/images/img14.jpg">
   </div>
   <div class="column">
-    <img src="../../assets/images/img4.jpeg">
-    <img src="../../assets/images/img2.jpeg">
-    <img src="../../assets/images/img6.jpeg">
+    <img src="../../assets/images/img10.jpg">
+    <img src="../../assets/images/img11.jpg">
+    <img src="../../assets/images/img12.jpg">
   </div>
 </div>
