--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -2,7 +2,9 @@
   <header class="header-styling">
     <div class="logo-wrapper">
       <p class="logo-styling" routerLink="home" mat-button>REDHAARE</p>
-      <p class="logo-underline-styling">fine line and micro-realistic tattoos</p>
+      <p class="logo-underline-styling">FINE LINE AND MICRO-REALISTIC TATTOOS</p>
+      <img class="img1" src="../../assets/images/stars3.png">
+      <img class="img2" src="../../assets/images/stars4.png">
     </div>
     <div class="menu-styling">
       <button class="menu-button-styling" routerLink="/" mat-button>{{ "header.home" | translate}}</button>
