--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -12,6 +12,17 @@
   padding: 15px;
 }
 
+.grid-element {
+  background-color: rgba(255, 255, 255, 0.46);
+  border-radius: 15px;
+  padding: 30px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+.grid-element-image {
+  border-radius: 15px;
+}
+
 img {
   object-fit: cover;
   object-position: 0 10%;
