--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -5,7 +5,7 @@
       <p class="content">{{ "home.aboutMeText" | translate }}</p>
     </div>
 
-    <div class="grid-element">
+    <div class="grid-element-image">
       <img src="../../assets/images/carlo.jpg" width="100%" height="350px">
     </div>
 
