--- a/frontend/src/app/contact/contact.component.css
+++ b/frontend/src/app/contact/contact.component.css
@@ -1,3 +1,36 @@
 .contact {
   font-size: xxx-large;
 }
+
+.wrapper {
+  margin: 30px;
+}
+
+img {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+  object-position: 0 50%;
+  border-radius: 15px;
+}
+
+.info-card {
+  background-color: rgba(255, 255, 255, 0.46);
+  border-radius: 15px;
+  padding: 30px;
+  margin: 30px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  text-align: center;
+}
+
+.content {
+  color: #686968;
+  font-family: Helvetica, sans-serif;
+  font-weight: lighter;
+  font-size: 18px;
+  line-height: 30px;
+  letter-spacing: 1px;
+  margin-top: 30px;
+}
+
+
