--- a/frontend/src/app/contact/contact.component.html
+++ b/frontend/src/app/contact/contact.component.html
@@ -1,3 +1,8 @@
 <div class="contact">
-  redhaare auf Instagram
+  <div class="info-card">
+    <p class="content">{{ "home.theStudio" | translate }}</p>
+  </div>
+  <div class="wrapper">
+    <img src="../../assets/images/img9.jpg">
+  </div>
 </div>
