--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -1,8 +1,8 @@
 .spectrumBackground {
   background:
     linear-gradient(#ffd1cd, transparent),
-    linear-gradient(to top left, #ffeb63, transparent),
-    linear-gradient(to top right, #fcb882, transparent);
+    linear-gradient(to top left, #ffdda2, transparent),
+    linear-gradient(to top right, #affca4, transparent);
   background-blend-mode: screen;
   min-height: 100%;
 }
