--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -12,6 +12,7 @@
     <div class="grid-element">
       <p class="headline">{{ "home.theStudio" | translate }}</p>
       <p class="content">{{ "home.theStudioText" | translate }}</p>
+      <button mat-raised-button class="location-button" routerLink="contact">{{ "home.location" | translate }}</button>
     </div>
 
     <div class="grid-element">
