--- a/frontend/src/app/faq/faq.component.css
+++ b/frontend/src/app/faq/faq.component.css
@@ -5,15 +5,17 @@
   padding: 30px;
 }
 
-.accordion-styling {
-}
-
 mat-expansion-panel {
   background-color: rgba(255, 255, 255, 0.46);
   color: #7b26cb !important;
   border-radius: 15px !important;
   margin-top: 15px;
   padding: 7.5px;
+}
+
+mat-expansion-panel-header {
+  height: 100%;
+  padding: 15px;
 }
 
 p {
