--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -38,15 +38,20 @@
 
 .menu-styling {
   margin-top: 30px;
-  border-top: dotted 5px blueviolet;
+  border-top: dotted 5px #dcc3fe;
   background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.mobile-menu-styling {
+  display: none;
+}
+
 .menu-button-styling {
   font-family: Helvetica, sans-serif;
+  letter-spacing: 1px;
   border-radius: 15px;
   color: #f54600;
   margin: 30px 10px 10px 10px;
@@ -71,5 +76,44 @@
   top: 30px;
   right: 12vw;
   width: 10vw;
+}
+
+@media screen and (max-width: 500px) {
+  .menu-styling {
+    display: none;
+  }
+
+  .mobile-menu-styling {
+    margin-top: 30px;
+    border-top: dotted 5px blueviolet;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .img1 {
+    position: absolute;
+    top: 20px;
+    left: 5vw;
+    width: 10vw;
+  }
+
+  .img2 {
+    position: absolute;
+    top: 20px;
+    right: 8vw;
+    width: 8vw;
+  }
+
+  .logo-styling {
+    font-size: 12vw;
+    line-height: 15vw;
+  }
+
+  .logo-underline-styling {
+    font-size: 3vw;
+    line-height: 5vw;
+  }
 }
 
