--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -1,13 +1,13 @@
 .wrapper {
   max-width: 1250px;
   margin: auto auto;
-  padding: 30px;
+  padding: 0 30px 30px 30px;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: auto auto;
-  column-gap: 120px;
+  column-gap: 60px;
   row-gap: 60px;
   padding: 15px;
 }
@@ -103,12 +103,13 @@ img {
   color: #7b26cb;
   box-shadow: none;
   padding: 10px;
-  width: 300px;
+  width: 240px;
   font-family: Helvetica, sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: lighter;
   letter-spacing: 2px;
   margin-top: 30px;
+  text-align: center;
 }
 
 
