--- a/frontend/src/app/components/gallery/gallery.component.html
+++ b/frontend/src/app/components/gallery/gallery.component.html
@@ -10,7 +10,7 @@
   <!-- Gallery -->
   <ng-container *ngIf="!isLoading && !error">
     <div class="gallery-styling">
-      <img *ngFor="let m of savedMedia" [lazyLoad]="m.media_url" src="./assets/images/stars1.png" alt="Tattoo design" (click)="enlargeImage(m)">
+      <img *ngFor="let m of savedMedia" [lazyLoad]="m.media_url" src="./assets/images/img11.jpg" alt="Tattoo design" (click)="enlargeImage(m)">
     </div>
 
     <!-- Filter button -->
