--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
     <div class="logo-wrapper">
       <p class="logo-styling" routerLink="home" mat-button>REDHAARE</p>
       <p class="logo-underline-styling">FINE LINE AND MICRO-REALISTIC TATTOOS</p>
-      <img class="img1" src="../../assets/images/stars3.png">
-      <img class="img2" src="../../assets/images/stars4.png">
+      <img class="img1" src="../../assets/images/Butterflies.png">
+      <img class="img2" src="../../assets/images/Butterfly.png">
     </div>
     <div class="menu-styling">
       <button class="menu-button-styling" [routerLink]="'/'" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }" mat-button>{{ "header.home" | translate}}</button>
